auto.. heigh increesing problem with todo-section fixed by self-align:top

--- a/main.scss
+++ b/main.scss
@@ -104,6 +104,7 @@ body{
        
         // right section
         .todo-section{
+            align-self:start;
             position: relative;
             grid-area: todo;
             color: var(--dark-col);
